changed page title

--- a/frontend/public/index.html
+++ b/frontend/public/index.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" />
     <link rel="stylesheet" href="./assets/css/aos.css" />
     <link rel="stylesheet" href="./assets/font-awesome/css/all.min.css" />
-    <title>React App</title>
+    <title>ReadMore</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
